[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeaudit-agent"
version = "0.1.0"
description = "Offline defensive static code audit agent for security and style review."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CodeAudit Agent"}]
keywords = ["static-analysis", "security", "cwe", "code-audit", "sast"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
codeaudit-agent = "codeaudit_agent.cli:main"

[tool.setuptools.packages.find]
include = ["codeaudit_agent*"]
